--- a/packages/google_maps_flutter/google_maps_flutter/example/ios/Podfile
+++ b/packages/google_maps_flutter/google_maps_flutter/example/ios/Podfile
@@ -32,7 +32,7 @@ target 'Runner' do
   target 'RunnerTests' do
     inherit! :search_paths
 
-    pod 'OCMock'
+    pod 'OCMock', '~> 3.9.1'
   end
 end
 
