--- a/packages/camera/camera/pubspec.yaml
+++ b/packages/camera/camera/pubspec.yaml
@@ -23,13 +23,22 @@ flutter:
 
 dependencies:
   camera_platform_interface: # ^2.1.0
-    path: ../camera_platform_interface
-  camera_web: #^0.2.1
-    path: ../camera_web
+#    path: ../camera_platform_interface
+    git:
+      url: https://github.com/joecks/plugins
+      ref: 76d0ec6a1342d4ae0fbd80898d8e906bd8c837a0
+      path: packages/camera/camera_platform_interface
+  camera_web: # ^0.2.1
+#    path: ../camera_web
+    git:
+      url: https://github.com/joecks/plugins
+      ref: 83f67ab19c0e287c1f3e9bf9b8697dcaa36812cf
+      path: packages/camera/camera_web
   flutter:
     sdk: flutter
   flutter_plugin_android_lifecycle: ^2.0.2
   quiver: ^3.0.0
+
 
 dev_dependencies:
   flutter_driver:
@@ -39,3 +48,4 @@ dev_dependencies:
   mockito: ^5.0.0
   plugin_platform_interface: ^2.0.0
   video_player: ^2.0.0
+
