--- a/packages/image_picker/image_picker_ios/example/pubspec.yaml
+++ b/packages/image_picker/image_picker_ios/example/pubspec.yaml
@@ -9,10 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_plugin_android_lifecycle: ^2.0.1
-  image_picker:
+  image_picker_ios:
     # When depending on this package from a real application you should use:
-    #   image_picker: ^x.y.z
+    #   image_picker_ios: ^x.y.z
     # See https://dart.dev/tools/pub/dependencies#version-constraints
     # The example app is bundled with the plugin so we use a path dependency on
     # the parent directory to use the current plugin's version.
@@ -20,7 +19,6 @@ dependencies:
   video_player: ^2.1.4
 
 dev_dependencies:
-  espresso: ^0.1.0+2
   flutter_driver:
     sdk: flutter
   integration_test:
