--- a/packages/image_picker/image_picker_ios/pubspec.yaml
+++ b/packages/image_picker/image_picker_ios/pubspec.yaml
@@ -1,7 +1,6 @@
-name: image_picker
-description: Flutter plugin for selecting images from the Android and iOS image
-  library, and taking new pictures with the camera.
-repository: https://github.com/flutter/plugins/tree/main/packages/image_picker/image_picker
+name: image_picker_ios
+description: iOS implementation of the video_picker plugin.
+repository: https://github.com/flutter/plugins/tree/main/packages/image_picker/image_picker_ios
 issue_tracker: https://github.com/flutter/flutter/issues?q=is%3Aissue+is%3Aopen+label%3A%22p%3A+image_picker%22
 version: 0.8.4+11
 
@@ -11,24 +10,17 @@ environment:
 
 flutter:
   plugin:
+    implements: image_picker
     platforms:
-      android:
-        package: io.flutter.plugins.imagepicker
-        pluginClass: ImagePickerPlugin
       ios:
         pluginClass: FLTImagePickerPlugin
-      web:
-        default_package: image_picker_for_web
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_plugin_android_lifecycle: ^2.0.1
-  image_picker_for_web: ^2.1.0
   image_picker_platform_interface: ^2.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   mockito: ^5.0.0
-  plugin_platform_interface: ^2.0.0
