[webview_flutter]add geolocation feature for android

--- a/packages/webview_flutter/webview_flutter/example/android/app/src/main/AndroidManifest.xml
+++ b/packages/webview_flutter/webview_flutter/example/android/app/src/main/AndroidManifest.xml
@@ -55,4 +55,10 @@
 
   <uses-permission android:name="android.permission.CAMERA"/>
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
+  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+  <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+  <uses-permission android:name="android.permission.ACCESS_GPS" />
+  <uses-permission android:name="android.permission.ACCESS_ASSISTED_GPS" />
+  <uses-permission android:name="android.permission.ACCESS_LOCATION" />
 </manifest>
