--- a/packages/webview_flutter/webview_flutter_android/pubspec.yaml
+++ b/packages/webview_flutter/webview_flutter_android/pubspec.yaml
@@ -19,7 +19,10 @@ flutter:
 dependencies:
   flutter:
     sdk: flutter
-  webview_flutter_platform_interface: ^1.8.0
+  # FOR TESTING ONLY. DO NOT MERGE.
+  webview_flutter_platform_interface:
+    path:
+      ../webview_flutter_platform_interface
 
 dev_dependencies:
   build_runner: ^2.1.4
