--- a/packages/webview_flutter/webview_flutter_web/pubspec.yaml
+++ b/packages/webview_flutter/webview_flutter_web/pubspec.yaml
@@ -21,7 +21,10 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
-  webview_flutter_platform_interface: ^1.8.0
+  # FOR TESTING ONLY. DO NOT MERGE.
+  webview_flutter_platform_interface:
+    path:
+      ../webview_flutter_platform_interface
 
 dev_dependencies:
   build_runner: ^2.1.5
