--- a/packages/webview_flutter/webview_flutter/pubspec.yaml
+++ b/packages/webview_flutter/webview_flutter/pubspec.yaml
@@ -2,7 +2,7 @@ name: webview_flutter
 description: A Flutter plugin that provides a WebView widget on Android and iOS.
 repository: https://github.com/flutter/plugins/tree/main/packages/webview_flutter/webview_flutter
 issue_tracker: https://github.com/flutter/flutter/issues?q=is%3Aissue+is%3Aopen+label%3A%22p%3A+webview%22
-version: 3.0.1
+version: 3.0.2
 
 environment:
   sdk: ">=2.14.0 <3.0.0"
@@ -19,9 +19,18 @@ flutter:
 dependencies:
   flutter:
     sdk: flutter
-  webview_flutter_android: ^2.8.0
-  webview_flutter_platform_interface: ^1.8.0
-  webview_flutter_wkwebview: ^2.7.0
+  # FOR TESTING ONLY. DO NOT MERGE.
+  webview_flutter_android:
+    path:
+      ../webview_flutter_android
+  # FOR TESTING ONLY. DO NOT MERGE.
+  webview_flutter_platform_interface:
+    path:
+      ../webview_flutter_platform_interface
+  # FOR TESTING ONLY. DO NOT MERGE.
+  webview_flutter_wkwebview:
+    path:
+      ../webview_flutter_wkwebview
 
 dev_dependencies:
   build_runner: ^2.1.5
