Partially process PR feedback

--- a/packages/local_auth/local_auth_android/example/pubspec.yaml
+++ b/packages/local_auth/local_auth_android/example/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
     sdk: flutter
   local_auth_android:
     # When depending on this package from a real application you should use:
-    #   local_auth: ^x.y.z
+    #   local_auth_android: ^x.y.z
     # See https://dart.dev/tools/pub/dependencies#version-constraints
     # The example app is bundled with the plugin so we use a path dependency on
     # the parent directory to use the current plugin's version.
