--- a/packages/image_picker/image_picker/example/pubspec.yaml
+++ b/packages/image_picker/image_picker/example/pubspec.yaml
@@ -20,7 +20,8 @@ dependencies:
   video_player: ^2.1.4
 
 dev_dependencies:
-  espresso: ^0.1.0+2
+  espresso:
+    path: ../../../espresso
   flutter_driver:
     sdk: flutter
   integration_test:
