--- a/packages/image_picker/image_picker/example/pubspec.yaml
+++ b/packages/image_picker/image_picker/example/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   video_player: ^2.1.4
 
 dev_dependencies:
+  # TODO(bparrishMines): Change version to `0.2.0` once published.
   espresso:
     path: ../../../espresso
   flutter_driver:
