--- a/packages/video_player/video_player_web/pubspec.yaml
+++ b/packages/video_player/video_player_web/pubspec.yaml
@@ -23,7 +23,10 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   video_player_platform_interface: 
-    path: ../video_player_platform_interface/
+    git:
+      url: git@github.com:apieceofcode1801/plugins.git
+      ref: main
+      path: packages/video_player/video_player_platform_interface
 
 dev_dependencies:
   flutter_test:
