--- a/packages/webview_flutter/webview_flutter_platform_interface/pubspec.yaml
+++ b/packages/webview_flutter/webview_flutter_platform_interface/pubspec.yaml
@@ -1,10 +1,10 @@
-name: webview_flutter_platform_interface
+name: webview_pro_platform_interface
 description: A common platform interface for the webview_flutter plugin.
-repository: https://github.com/flutter/plugins/tree/main/packages/webview_flutter/webview_flutter_platform_interface
-issue_tracker: https://github.com/flutter/flutter/issues?q=is%3Aissue+is%3Aopen+label%3A%22p%3A+webview_flutter%22
+repository: https://github.com/wenzhiming/flutter-plugins/tree/main/packages/webview_flutter/webview_flutter_platform_interface
+issue_tracker: https://github.com/wenzhiming/flutter-plugins/issues
 # NOTE: We strongly prefer non-breaking changes, even at the expense of a
 # less-clean API. See https://flutter.dev/go/platform-interface-breaking-changes
-version: 1.8.1
+version: 1.8.1+1
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
