--- a/packages/webview_flutter/webview_flutter_android/pubspec.yaml
+++ b/packages/webview_flutter/webview_flutter_android/pubspec.yaml
@@ -1,8 +1,8 @@
-name: webview_flutter_android
+name: webview_pro_android
 description: A Flutter plugin that provides a WebView widget on Android.
-repository: https://github.com/flutter/plugins/tree/main/packages/webview_flutter/webview_flutter_android
-issue_tracker: https://github.com/flutter/flutter/issues?q=is%3Aissue+is%3Aopen+label%3A%22p%3A+webview%22
-version: 2.8.3
+repository: https://github.com/wenzhiming/flutter-plugins/tree/main/packages/webview_flutter/webview_flutter_android
+issue_tracker: https://github.com/wenzhiming/flutter-plugins/issues
+version: 2.8.3+1
 
 environment:
   sdk: ">=2.14.0 <3.0.0"
@@ -19,8 +19,8 @@ flutter:
 dependencies:
   flutter:
     sdk: flutter
-  webview_flutter_platform_interface:
-    path: ../webview_flutter_platform_interface
+  webview_pro_platform_interface: ^1.8.1+1
+#    path: ../webview_flutter_platform_interface
 
 dev_dependencies:
   build_runner: ^2.1.4
