--- a/packages/webview_flutter/webview_flutter/example/pubspec.yaml
+++ b/packages/webview_flutter/webview_flutter/example/pubspec.yaml
@@ -10,7 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   path_provider: ^2.0.6
-  webview_flutter:
+  flutter_webview_pro:
     # When depending on this package from a real application you should use:
     #   webview_flutter: ^x.y.z
     # See https://dart.dev/tools/pub/dependencies#version-constraints
