--- a/packages/webview_flutter/webview_flutter/pubspec.yaml
+++ b/packages/webview_flutter/webview_flutter/pubspec.yaml
@@ -19,12 +19,9 @@ flutter:
 dependencies:
   flutter:
     sdk: flutter
-  webview_flutter_android:
-    path: ../webview_flutter_android
-  webview_flutter_platform_interface:
-    path: ../webview_flutter_platform_interface
-  webview_flutter_wkwebview:
-    path: ../webview_flutter_wkwebview
+  webview_pro_android: ^2.8.3+1
+  webview_pro_platform_interface: ^1.8.1+1
+  webview_flutter_wkwebview: ^2.7.1
 
 dev_dependencies:
   build_runner: ^2.1.5
