--- a/packages/webview_flutter/webview_flutter_android/example/pubspec.yaml
+++ b/packages/webview_flutter/webview_flutter_android/example/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   
   path_provider: ^2.0.6
   
-  webview_flutter_android:
+  webview_pro_android:
     # When depending on this package from a real application you should use:
     #   webview_flutter: ^x.y.z
     # See https://dart.dev/tools/pub/dependencies#version-constraints
