--- a/packages/webview_flutter/webview_flutter/pubspec.yaml
+++ b/packages/webview_flutter/webview_flutter/pubspec.yaml
@@ -1,8 +1,8 @@
 name: flutter_webview_pro
-description: A Flutter plugin that provides a WebView widget who Support photo upload/take camera and Geolocation.一个在Flutter上支持图片上传、相机拍照、地理定位的webview插件
+description: A Flutter plugin that provides a WebView widget who Support photo upload/take camera and Geolocation.
 repository: https://github.com/wenzhiming/flutter-plugins/tree/dev/packages/webview_flutter/webview_flutter
 issue_tracker: https://github.com/wenzhiming/flutter-plugins/issues
-version: 3.0.1+1
+version: 3.0.1+2
 
 environment:
   sdk: ">=2.14.0 <3.0.0"
@@ -19,9 +19,9 @@ flutter:
 dependencies:
   flutter:
     sdk: flutter
-  webview_pro_android: ^2.8.3+1
-  webview_pro_platform_interface: ^1.8.1+1
-  webview_flutter_wkwebview: ^2.7.1
+  webview_pro_android: ^2.8.3+2
+  webview_pro_platform_interface: ^1.8.1+2
+  webview_pro_wkwebview: ^2.7.1+1
 
 dev_dependencies:
   build_runner: ^2.1.5
