--- a/packages/image_picker/image_picker/example/pubspec.yaml
+++ b/packages/image_picker/image_picker/example/pubspec.yaml
@@ -20,9 +20,8 @@ dependencies:
   video_player: ^2.1.4
 
 dev_dependencies:
-  # TODO(bparrishMines): Change version to `0.2.0` once published.
   espresso:
-    path: ../../../espresso
+    path: ^0.2.0
   flutter_driver:
     sdk: flutter
   integration_test:
