--- a/packages/image_picker/image_picker/example/pubspec.yaml
+++ b/packages/image_picker/image_picker/example/pubspec.yaml
@@ -20,8 +20,7 @@ dependencies:
   video_player: ^2.1.4
 
 dev_dependencies:
-  espresso:
-    path: ^0.2.0
+  espresso: ^0.2.0
   flutter_driver:
     sdk: flutter
   integration_test:
