--- a/packages/google_sign_in/google_sign_in_ios/example/pubspec.yaml
+++ b/packages/google_sign_in/google_sign_in_ios/example/pubspec.yaml
@@ -9,9 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  google_sign_in:
+  google_sign_in_ios:
     # When depending on this package from a real application you should use:
-    #   google_sign_in: ^x.y.z
+    #   google_sign_in_ios: ^x.y.z
     # See https://dart.dev/tools/pub/dependencies#version-constraints
     # The example app is bundled with the plugin so we use a path dependency on
     # the parent directory to use the current plugin's version.
@@ -19,7 +19,6 @@ dependencies:
   http: ^0.13.0
 
 dev_dependencies:
-  espresso: ^0.1.0+2
   flutter_driver:
     sdk: flutter
   integration_test:
