--- a/packages/image_picker/image_picker_ios/pubspec.yaml
+++ b/packages/image_picker/image_picker_ios/pubspec.yaml
@@ -6,13 +6,14 @@ version: 0.8.4+11
 
 environment:
   sdk: ">=2.14.0 <3.0.0"
-  flutter: ">=2.5.0"
+  flutter: ">=2.8.0"
 
 flutter:
   plugin:
     implements: image_picker
     platforms:
       ios:
+        dartPluginClass: ImagePickerIOS
         pluginClass: FLTImagePickerPlugin
 
 dependencies:
@@ -24,3 +25,4 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   mockito: ^5.0.0
+  pigeon: ^2.0.3
