--- a/packages/local_auth/local_auth/pubspec.yaml
+++ b/packages/local_auth/local_auth/pubspec.yaml
@@ -22,9 +22,10 @@ dependencies:
     sdk: flutter
   intl: ^0.17.0
   local_auth_android: ^1.0.0
-  local_auth_ios: ^ 1.0.0
+  # TODO(BeMacized): Require 1.0.1 minimum once version is published (https://github.com/flutter/plugins/pull/5249)
+#  local_auth_ios: ^1.0.1
+  local_auth_ios: ^1.0.0
   local_auth_platform_interface: ^1.0.1
-  platform: ^3.0.0
 
 dev_dependencies:
   flutter_driver:
