--- a/packages/local_auth/local_auth/pubspec.yaml
+++ b/packages/local_auth/local_auth/pubspec.yaml
@@ -3,7 +3,7 @@ description: Flutter plugin for Android and iOS devices to allow local
   authentication via fingerprint, touch ID, face ID, passcode, pin, or pattern.
 repository: https://github.com/flutter/plugins/tree/main/packages/local_auth/local_auth
 issue_tracker: https://github.com/flutter/flutter/issues?q=is%3Aissue+is%3Aopen+label%3A%22p%3A+local_auth%22
-version: 2.1.0
+version: 2.0.0
 
 environment:
   sdk: ">=2.14.0 <3.0.0"
@@ -16,8 +16,9 @@ flutter:
         default_package: local_auth_android
       ios:
         default_package: local_auth_ios
-      windows:
-        default_package: local_auth_windows
+      # Uncomment once the PR #4806 is merged.
+      # windows:
+      #  default_package: local_auth_windows
 
 dependencies:
   flutter:
@@ -25,7 +26,8 @@ dependencies:
   intl: ^0.17.0
   local_auth_android: ^1.0.0
   local_auth_ios: ^1.0.1
-  local_auth_windows: ^1.0.0
+  # Uncomment once the PR #4806 is merged.
+  # local_auth_windows: ^1.0.0
   local_auth_platform_interface: ^1.0.1
 
 dev_dependencies:
