--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -9,7 +9,11 @@ packages/webview_flutter/**                    @bparrishMines
 
 # Sub-package-level rules. These should stay last, since the last matching
 # entry takes precedence.
+
+# - Web
 packages/**/*_web/**                                     @ditman
+
+# - Android
 packages/camera/android/**                               @camsim99
 packages/google_maps_flutter/android/**                  @GaryQian
 packages/google_sign_in/google_sign_in_android/**        @camsim99
