--- a/packages/camera/camera/example/pubspec.yaml
+++ b/packages/camera/camera/example/pubspec.yaml
@@ -20,6 +20,11 @@ dependencies:
   video_player: ^2.1.4
 
 dev_dependencies:
+  build_runner: ^2.1.10
+  code_excerpt_updater:
+    path: ../../../../site-shared/packages/code_excerpt_updater
+  code_excerpter:
+    path: ../../../../site-shared/packages/code_excerpter
   flutter_driver:
     sdk: flutter
   flutter_test:
